fix shadow radius on small screens

--- a/docroot/user/themes/obyte/scss/template/custom/_main-page.scss
+++ b/docroot/user/themes/obyte/scss/template/custom/_main-page.scss
@@ -755,7 +755,7 @@
               bottom: 1px;
               left: 4px;
               overflow: hidden;
-              border-radius: 55px;
+              border-radius: 6em;
               box-shadow: 0 4px 42px 5px rgba(0,0,0,.25);
             }
           }
@@ -913,6 +913,17 @@
         flex-flow: column wrap;
         .member {
           width: auto;
+        }
+      }
+    }
+    &.downloads-wrap {
+      .img-block {
+        &.mobile {
+          .shadow-block {
+            &:before {
+              border-radius: 3em;
+            }
+          }
         }
       }
     }
